Fix spacing around dropcaps

--- a/ArticleTemplates/assets/scss/helpers/_mixins.scss
+++ b/ArticleTemplates/assets/scss/helpers/_mixins.scss
@@ -150,7 +150,8 @@ $meta-lead-2: 2.2rem;
 		font-style: normal;
 		font-size: 3.3334em;
 		line-height: 1;
-		margin-bottom: base-px(1.33333);
+		margin-top: -2px;
+		margin-bottom: base-px(-1.33333);
 		padding-right: base-px(0.5);
 		float: left;
 		@include mq($from: col2) {
